catkin_ws_modified/logs_release/saw_intuitive_research_kit/build.make.004.log.stderr
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp: In member function ‘virtual void mtsIntuitiveResearchKitArm::Run()’:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:309:24: error: ‘RunEffortJoint’ was not declared in this scope
         RunEffortJoint();
                        ^
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp: In member function ‘virtual void mtsIntuitiveResearchKitArm::SetJointEffort(const prmForceTorqueJointSet&)’:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:881:5: error: ‘efforts’ was not declared in this scope
     efforts.Add(effort);
     ^
In file included from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnClassServices.h:36:0,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnGenericObject.h:169,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnSerializer.h:33,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstVector/vctFixedSizeConstMatrixBase.h:28,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstVector/vctFixedSizeMatrixBase.h:30,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstVector/vctFixedSizeConstMatrixRef.h:30,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstVector/vctFixedSizeMatrix.h:30,
                 from /home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstNumerical/nmrIsOrthonormal.h:32,
                 from /home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:25:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp: At global scope:
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:31:39: warning: ‘mtsIntuitiveResearchKitArmClassServicesPointer’ defined but not used [-Wunused-variable]
 CMN_IMPLEMENT_SERVICES_DERIVED_ONEARG(mtsIntuitiveResearchKitArm, mtsTaskPeriodic, mtsTaskPeriodicConstructorArg);
                                       ^
/home/davincic2/catkin_ws/src/cisst-saw/cisst/cisstCommon/cmnClassRegisterMacros.h:265:31: note: in definition of macro ‘CMN_IMPLEMENT_SERVICES_INTERNAL’
 static cmnClassServicesBase * className##ClassServicesPointer = className::ClassServices();
                               ^
/home/davincic2/catkin_ws/src/cisst-saw/sawIntuitiveResearchKit/components/code/mtsIntuitiveResearchKitArm.cpp:31:1: note: in expansion of macro ‘CMN_IMPLEMENT_SERVICES_DERIVED_ONEARG’
 CMN_IMPLEMENT_SERVICES_DERIVED_ONEARG(mtsIntuitiveResearchKitArm, mtsTaskPeriodic, mtsTaskPeriodicConstructorArg);
 ^
make[2]: *** [CMakeFiles/sawIntuitiveResearchKit.dir/code/mtsIntuitiveResearchKitArm.cpp.o] Error 1
make[1]: *** [CMakeFiles/sawIntuitiveResearchKit.dir/all] Error 2
make: *** [all] Error 2
